@@ -1,7 +1,6 @@
 package edu.kit.ifv.trafficspvisualizer.util.export;
 
-import edu.kit.ifv.trafficspvisualizer.util.image.ChoiceOptionImage;
-import org.junit.jupiter.api.Disabled;
+import edu.kit.ifv.trafficspvisualizer.util.image.SurveyImage;
 import org.junit.jupiter.api.Test;
 
 import java.awt.image.BufferedImage;
@@ -17,24 +16,24 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class ImageExporterTest {
 
-    @Disabled
+    @Test
     void testExport() throws IOException {
-        List<ChoiceOptionImage> imagesList = new ArrayList<>();
+        List<SurveyImage> imagesList = new ArrayList<>();
         for (int i = 0; i < 4; i++) {
             for (int j = 0; j < 5; j++) {
-                ChoiceOptionImage choiceOptionImage = new ChoiceOptionImage(
-                    "test" + i,
-                    new BufferedImage(100,100, BufferedImage.TYPE_INT_RGB),
-                    10 * i,
-                    i,
-                    j
+                SurveyImage surveyImage = new SurveyImage(
+                        "test" + i,
+                        new BufferedImage(100, 100, BufferedImage.TYPE_INT_RGB),
+                        10 * i,
+                        i,
+                        j
                 );
 
-                imagesList.add(choiceOptionImage);
+                imagesList.add(surveyImage);
             }
         }
 
-        ChoiceOptionImage[] images = imagesList.toArray(new ChoiceOptionImage[0]);
+        SurveyImage[] images = imagesList.toArray(new SurveyImage[0]);
 
         File exportFolderParent = new File(String.valueOf(Files.createTempDirectory("ExportFolder")));
         String name = "test";
@@ -43,7 +42,7 @@ class ImageExporterTest {
         imageExporter.export(images, exportFolderParent, name, "");
 
         assertEquals(Objects.requireNonNull(exportFolderParent.listFiles()).length, 1);
-        assertTrue(Files.exists(exportFolderParent.toPath().resolve(name+"_export")));
+        assertTrue(Files.exists(exportFolderParent.toPath().resolve(name + "_export")));
 
         File exportFolder = exportFolderParent.toPath().resolve(name + "_export").toFile();
 
@@ -64,7 +63,7 @@ class ImageExporterTest {
         }
 
         // check image count
-        for(File file: Objects.requireNonNull(exportFolder.listFiles())) {
+        for (File file : Objects.requireNonNull(exportFolder.listFiles())) {
             assertEquals(Objects.requireNonNull(file.listFiles()).length, 5);
         }
 
@@ -72,16 +71,16 @@ class ImageExporterTest {
         // loop trough directories containing images
         for (int i = 0; i < Objects.requireNonNull(exportFolder.listFiles()).length; i++) {
             //loop trough images
-            for(File file: Objects.requireNonNull(exportFolder.toPath().resolve(String.valueOf(i)).toFile().listFiles())) {
+            for (File file : Objects.requireNonNull(exportFolder.toPath().resolve(String.valueOf(i)).toFile().listFiles())) {
                 // loop trough possible names
                 boolean foundName = false;
                 for (int j = 0; j < 5; j++) {
-                    if (file.getName().equals("#c_%04d##c_%04d##c_%04d#title.png".formatted(10 * i, i, j))) {
+                    if (file.getName().equals(String.format("#c_%04d##c_%04d##c_%04d#%s.png", i, i * 10, j, name + i))) {
                         foundName = true;
                         break;
                     }
                 }
-                if(!foundName) assertEquals(file.getName(), "");
+                if (!foundName) assertEquals(file.getName(), "");
             }
         }
     }
